# cgo-call-arcsoft

./: .gitignore  README.md
ArcSoft_ArcFace_Linux_x64_V3.0/: releasenotes.txt
ArcSoft_ArcFace_Linux_x64_V3.0/samplecode/: ReadMe.txt
ArcSoft_ArcFace_Linux_x64_V3.0/samplecode/ASFTestDemo/: CMakeLists.txt  Makefile  debug.go  samplecode.cpp  samplecode.cpp.bak  samplecode.h
ArcSoft_ArcFace_Linux_x64_V3.0/samplecode/ASFTestDemo/images/: 640x480_1.NV21  640x480_2.NV21  640x480_3.NV21
ArcSoft_ArcFace_Linux_x64_V3.0/samplecode/ASFTestDemo/inc/: arcsoft_face_sdk.h  merror.h
